<resources>
    <string name="app_name">ZooDex</string>
    <string name="credits"><u>Crédits</u></string>
    <string name="notifs">Notifications</string>
    <string name="dalton">Mode daltonien</string>
    <string name="vibrations">Vibrations</string>
    <string name="volume">Volume</string>
    <string name="title_activity_my_zoo_dex">MyZooDex</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>