<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/volumeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.203" />

        <SeekBar
            android:id="@+id/volumeBar"
            android:layout_width="161dp"
            android:layout_height="33dp"
            app:layout_constraintBottom_toTopOf="@+id/daltonienBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.265"
            app:layout_constraintStart_toEndOf="@+id/volumeText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.89" />

        <TextView
            android:id="@+id/daltonienText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dalton"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.271"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.287" />

        <CheckBox
            android:id="@+id/daltonienBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.356"
            app:layout_constraintStart_toEndOf="@+id/daltonienText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.282" />

        <TextView
            android:id="@+id/vibrationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrations"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.374" />

        <CheckBox
            android:id="@+id/vibrationBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="onCheckboxClicked"
            app:layout_constraintHorizontal_bias="0.582"
            app:layout_constraintStart_toEndOf="@+id/vibrationText"
            app:layout_constraintTop_toBottomOf="@+id/daltonienBox"
            app:layout_constraintVertical_bias="0.027" />

        <TextView
            android:id="@+id/notifText"
            android:layout_width="139dp"
            android:layout_height="27dp"
            android:text="@string/notifs"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.237"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.455" />

        <CheckBox
            android:id="@+id/notificationBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toEndOf="@+id/notifText"
            app:layout_constraintTop_toBottomOf="@+id/vibrationBox"
            app:layout_constraintVertical_bias="0.026" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:layout_weight="1"
            android:backgroundTint="@color/rouge"
            android:text="Supprimer les données"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonMDP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="Changer son mot de passe"
            app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.968" />

        <TextView
            android:id="@+id/creditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:textColor="#017BD7"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonDelete" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>